Fixed equipment focus clipped by adjacent items.

--- a/HeroSystem6eHeroic/HeroSystem6eHeroic.css
+++ b/HeroSystem6eHeroic/HeroSystem6eHeroic.css
@@ -3884,9 +3884,9 @@ select:focus + .focus {
 	flex-direction: column;
 	justify-content: space-between;
 	max-width: 248px;
-	padding-left: 5px;
 	margin-left: 4px;
 	padding: 4px;
+	padding-top: 3px;
 	background-color: lightcyan;
 	border: solid 2px lightgray;
 	border-radius: 3px;
@@ -3901,6 +3901,7 @@ select:focus + .focus {
 
 .subitem-tab-gear-flex-container-equipment h1 {
 	margin-right: 8px;
+	margin-bottom: 2px;
 }
 
 .subitem-tab-gear-flex-container-equipment input[type=text] {
@@ -3911,6 +3912,14 @@ select:focus + .focus {
 	max-height: 21px;
 	margin-right: 0px;
 	border: solid 1px #eaeaea;
+}
+
+/* .subitem-tab-gear-flex-container-equipment input[type=text]:hover {
+	position: relative;
+} */
+
+.subitem-tab-gear-flex-container-equipment input[type=text]:focus {
+	position: relative;
 }
 
 .subitem-tab-gear-flex-container-equipment input[type=number] {
@@ -4328,6 +4337,8 @@ select:focus + .focus {
 	height: 21px;
 	max-width: 38px;
 	border: solid 1px lightgray;
+	text-align: right;
+	padding-right: 1px;
 }
 
 .subitem-flex-container-martial-cv-damage-row input[type=text] {
